Fixed the annoying cookie consent bug from the header, which was covering the menu.

--- a/magazin/catalog/view/theme/journal2/css/adjust.css
+++ b/magazin/catalog/view/theme/journal2/css/adjust.css
@@ -69,7 +69,7 @@ body.group4 .secondary-menu-item-3 span {
 }
 
 #cc-notification {
-	display: inline !important;
+	display: inline;
 }
 
 .list .bad_row td {
